# cscg_torch

./: .gitignore  CLAUDE.md  GEMINI.md  INTEGRATION_SUMMARY.md  LICENSE  MANIFEST.in  ORGANIZATION_SUMMARY.md  README.md  V100_OPTIMIZATION_PLAN.md  __init__.py  activate_env.sh  colab_diagnostic.py  colab_imports.py  colab_imports_fixed.py  colab_setup.py  compare_cpu_gpu.py  comprehensive_performance_test.py  comprehensive_test.py  config.py  cuda_safety_demo.py  debug_optimization_bug.py  debug_test.py  demo_integration.py  dev_notes.md  device_diagnostic.py  final_test_report.py  fix_item_bottleneck.py  full_run_example.py  gpu_analysis.py  gpu_optimization_benchmark.py  gpu_optimized_chmm.py  gpu_profiling_script.py  granular_baum_welch_profiler.py  granular_profiler.py  mps_safe_performance_test.py  performance_profiler.py  pyproject.toml  quick_test.py  quick_test_main.py  refactor.md  (+17 more)
agent_adapters/: __init__.py  agent_2d.py  base_agent.py
cscg_torch/cscg_torch/: __init__.py
cscg_torch/cscg_torch/env_adapters/: base_adapter.py
cscg_torch/cscg_torch/models/: train_utils.py
cscg_torch/cscg_torch/utils/: __init__.py
env_adapters/: __init__.py  base_adapter.py  room_adapter.py  room_utils.py
examples/: CSCG_Torch_Colab_Demo.ipynb  README.md  colab_demo.ipynb  quick_start_example.py  room_navigation_example.py
examples/scripts/: test_a100_setup.py  test_device.py  test_gpu_sequence.py  test_long_gpu.py  test_simple_gpu.py  test_small_training.py  test_v100_optimization.py  train_room.py
models/: __init__.py  chmm_optimized.py  chmm_torch.py  chmm_torch_optimized.py  cuda_kernels.py  train_utils.py  train_utils_optimized.py
room/: room_10x10.npy  room_20x20.npy  room_50x50.npy  room_5x5.npy
rooms/: README.md  generate_rooms.py  room_10x10_16states.npy  room_10x10_16states.pt  room_10x10_16states.txt  room_20x20_16states.npy  room_20x20_16states.pt  room_20x20_16states.txt  room_50x50_16states.npy  room_50x50_16states.pt  room_50x50_16states.txt  room_5x5_16states.npy  room_5x5_16states.pt  room_5x5_16states.txt
tests/: __init__.py  run_all_tests.py  test_config.py
tests/env_adapters/: room_adapter_test.py  test_new_functions.py  test_room_adapters.py
tests/integration/: test_full_pipeline.py
tests/models/: test_chmm_torch.py
utils/: __init__.py  data_utils.py  gpu_utils.py  plot_utils.py
